Updated css to fix issue where headshot appeared too large on mobile devices

--- a/style.css
+++ b/style.css
@@ -59,10 +59,16 @@ main {
     align-items: center;
     margin: 0 auto;
     margin-bottom: 40px;
-    max-width: auto;
+    max-width: 800px;
     height: auto;
     border-radius: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.headshot-container img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 40px;
 }
 
 /* Summary Styles */
